@@ -89,7 +89,7 @@ void clear_playlist_buffer()
 
 void create_playlist()
 {
-	GtkWidget *tree;
+	GtkWidget *tree,column;
 	GtkCellRenderer *renderer;
 	if(info.playlist_running)
 	{
@@ -141,7 +141,10 @@ void create_playlist()
 	renderer = gtk_cell_renderer_text_new();
 	gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(tree), -1, "Track", renderer, 
 			"text", 6,"background-set", 4, "background", 5, NULL);
-	gtk_tree_view_column_set_resizable(gtk_tree_view_get_column((GtkTreeView*)tree, 0), TRUE);
+	gtk_tree_view_column_set_max_width(gtk_tree_view_get_column((GtkTreeView*)tree, 0), 80);
+	gtk_tree_view_column_set_sizing(gtk_tree_view_get_column((GtkTreeView*)tree, 0),  GTK_TREE_VIEW_COLUMN_AUTOSIZE);
+//	gtk_tree_view_column_set_resizable(gtk_tree_view_get_column((GtkTreeView*)tree, 0), TRUE);
+	
 
 	renderer = gtk_cell_renderer_text_new();
 	gtk_tree_view_insert_column_with_attributes(GTK_TREE_VIEW(tree), -1, "Title", renderer, 
