@@ -1,3 +1,7 @@
+14-05-2004 Qball <Qball@qballcow.nl>
+	* Made track width in current playlist fixed width. so it wont get
+huge on weird tags.
+	* Set a max width
 12-05-2004 Qball <Qball@qballcow.nl>
 	* Removed some dead code..  
 
